Remove String Templates (JEP 459) https://mail.openjdk.org/pipermail/amber-spec-experts/2024-April/004106.html